--- a/templates/parts/menu-left.html.twig
+++ b/templates/parts/menu-left.html.twig
@@ -11,7 +11,7 @@
     <div class="mt-12 flex flex-col gap-y-4 text-gray-500 fill-gray-500 text-sm">
         <div class="text-gray-400/70  font-medium uppercase">Menu</div>
 
-        <a class="flex items-center space-x-2 py-1font-semibold  border-r-4 border-r-red-600 pr-20 " href="#">
+        <a class="flex items-center space-x-2 py-1font-semibold  border-r-4 border-r-red-600 pr-20 " href="{{ path('index')}}">
             <svg class="h-5 w-5 fill-red-600 " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" >
                 <path d="M5 22h14v0c1.1 0 2-.9 2-2v-9 0c0-.27-.11-.53-.29-.71l-8-8v0c-.4-.39-1.02-.39-1.41 0l-8 8h0c-.2.18-.3.44-.3.71v9 0c0 1.1.89 2 2 2Zm5-2v-5h4v5Zm-5-8.59l7-7 7 7V20h-3v-5 0c0-1.11-.9-2-2-2h-4v0c-1.11 0-2 .89-2 2v5H5Z"></path>
             </svg>
