--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -11,7 +11,7 @@
         </nav>
 
         <div class="flex flex-col justify-between mt-4 bg-black/10 bg-blend-multiply rounded-3xl h-80 overflow-hidden bg-cover bg-center px-7 pt-4 pb-6 text-white"
-             style="background-image: url('images/inception.jpg');" >
+             style="background-image: url('https://resize.elle.fr/original/var/plain_site/storage/images/loisirs/cinema/news/inception-films-et-series-a-regarder-si-vous-aimez-le-film-avec-leonardo-dicaprio/97088011-1-fre-FR/Inception-5-films-et-series-a-regarder-si-vous-aimez-le-film-avec-Leonardo-DiCaprio.jpg');" >
             <div class="flex -space-x-1 items-center ">
                 <img class="rounded-full w-7 h-7 shadow-lg border border-white" src="https://random.imagecdn.app/100/100?a" alt="" srcset="">
                 <img class="rounded-full w-7 h-7 shadow-lg border border-white" src="https://random.imagecdn.app/100/100?b" alt="" srcset="">
@@ -59,19 +59,9 @@
         </div>
 
         <ul class="mt-4 grid grid-cols-2 gap-y-5 sm:grid-cols-3 gap-x-5 ">
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
-            {% include 'parts/movie_card_homepage.html.twig' %}
+            {% for movie in movies %}
+                {% include 'parts/movie_card_homepage.html.twig' %}
+            {% endfor %}
         </ul>
     </section>
 {% endblock %}
-
